# yew-functional-TodoMVC

./: .gitignore  Cargo.toml  README.md  index-e55aac4720222b20.js  index-e55aac4720222b20_bg.wasm  index.html  package-lock.json  package.json  webpack.config.js
.github/workflows/: deploy.yml
src/: app.rs  copyright.rs  footer.rs  header.rs  item.rs  lib.rs  list.rs  macros.rs  main.rs
static/: index.html
